[package]
name = "carton"
version = "0.1.2"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
toml="0.8.23"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
reqwest = {version = "0.12.22", features = ["json"]}
sha2 = "0.10.9"
hex = "0.4.3"

[profile.release]
panic = 'abort'
debug = false
opt-level = 'z'
lto=true
strip = true 